@@ -196,7 +196,6 @@ session Pure =
     "System/invoke_scala.ML"
     "System/isabelle_process.ML"
     "System/isabelle_system.ML"
-    "System/isar.ML"
     "System/message_channel.ML"
     "System/options.ML"
     "System/system_channel.ML"
